# posthog-telemetry

./: .gitignore  AI_INTEGRATION_GUIDE.md  CMakeLists.txt  LICENSE  Makefile  POSTHOG-SETUP.md  README.md  TELEMETRY-SCHEMA.md
.antigravity-delegate/: delegation_log.md
.antigravity-delegate/sessions/: session_history.json
.antigravity-delegate/sessions/responses/: response_20260712_103321.txt
.github/workflows/: tests.yml
include/: telemetry.hpp
src/: telemetry.cpp
test/cpp/: CMakeLists.txt  test_application_lifecycle.cpp  test_envelope.cpp  test_error_handling.cpp  test_event.cpp  test_main.cpp  test_queue.cpp  test_telemetry.cpp
